--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 
-.ui.borderless.menu {
+.ui.borderless.top.menu {
   background-color: #f5f5f5;
+  border: none;
+  box-shadow: none;
+}
+
+.ui.borderless.middle.menu {
   border: none;
   box-shadow: none;
 }
