--- a/style.css
+++ b/style.css
@@ -9,3 +9,10 @@
   border: none;
   box-shadow: none;
 }
+
+.black-background {
+  background-color: #292929;
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
